@@ -88,7 +88,7 @@ public class WebTest {
 
     private void invokeJsp() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port + contextRoot
+        URL url = URI.create("http://" + host  + ":" + port + contextRoot
                           + "/jsp/formHintField.jsp?"
                           + LOCALE_CHARSET_INFO_FORM_HINT_FIELD
                           + "="
@@ -96,7 +96,7 @@ public class WebTest {
                           + "&"
                           + SUN_WEB_APP_FORM_HINT_FIELD
                           + "="
-                          + SUN_WEB_APP_FORM_HINT_FIELD_CHARSET);
+                          + SUN_WEB_APP_FORM_HINT_FIELD_CHARSET).toURL();
         System.out.println("Invoking URL: " + url.toString());
 
         URLConnection conn = url.openConnection();
