@@ -53,8 +53,8 @@ public class WebTest {
         InputStream is = null;
         BufferedReader input = null;
         try {
-            URL url = new URL("http://" + host  + ":" + port + contextRoot
-                              + "/subdir/including.txt");
+            URL url = URI.create("http://" + host  + ":" + port + contextRoot
+                              + "/subdir/including.txt").toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
